--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "chai": "^3.2.0",
     "chai-as-promised": "^5.1.0",
     "cucumber": "^0.5.2",
+    "fs": "0.0.2",
     "grunt": "^0.4.5",
     "grunt-cucumberjs": "^0.7.3",
     "grunt-protractor-runner": "^2.0.0",
     "grunt-protractor-webdriver": "^0.2.0",
     "grunt-shell": "^1.1.2",
     "load-grunt-tasks": "^3.2.0",
-    "protractor": "^2.1.0"
+    "path": "^0.11.14",
+    "phantomjs": "^1.9.18",
+    "protractor": "^2.1.0",
+    "protractor-cucumber-junit": "^1.1.3",
+    "selenium-webdriver": "^2.46.1"
   },
   "scripts": {
     "postinstall": "./node_modules/protractor/bin/webdriver-manager update --standalone"
