--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "selenium-webdriver": "^2.46.1"
   },
   "scripts": {
-    "postinstall": "./node_modules/protractor/bin/webdriver-manager update --standalone"
+    "postinstall": "node ./node_modules/protractor/bin/webdriver-manager update --standalone"
   }
 }
